--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
-[package]
-name = "lynx-rs"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
+[workspace]
+members = [
+    "backend",
+    "frontend",
+    "shared"
+]
