--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,4 +14,6 @@ serde_json = "1.0.132"
 sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"] }
 tokio = { version = "1.41.0", features = ["full"] }
 tower = "0.5.1"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 uuid = "1.11.0"
